// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swiper :props :animation fade 1`] = `
<div class="t-swiper">
  <div class="t-swiper__wrap t-swiper--inside">
    <div class="t-swiper__content t-swiper-fade">
      <div class="t-swiper__container"></div>
    </div>
    <ul class="t-swiper__navigation t-swiper__navigation-bars"></ul>
  </div>
</div>
`;

exports[`Swiper :props :autoplay 1`] = `
<div class="t-swiper">
  <div class="t-swiper__wrap t-swiper--inside">
    <div class="t-swiper__content">
      <div class="t-swiper__container" style="transform: translate3d(-0%, 0px, 0px);"></div>
    </div>
    <ul class="t-swiper__navigation t-swiper__navigation-bars"></ul>
  </div>
</div>
`;

exports[`Swiper :props :defaultCurrent 1`] = `
<div class="t-swiper">
  <div class="t-swiper__wrap t-swiper--inside">
    <div class="t-swiper__content">
      <div class="t-swiper__container" style="transform: translate3d(-0%, 0px, 0px);"></div>
    </div>
    <ul class="t-swiper__navigation t-swiper__navigation-bars"></ul>
  </div>
</div>
`;

exports[`Swiper :props :direction 1`] = `
<div class="t-swiper">
  <div class="t-swiper__wrap t-swiper--inside t-swiper--vertical">
    <div class="t-swiper__content">
      <div class="t-swiper__container" style="transform: translate3d(0, -0%, 0px);"></div>
    </div>
    <ul class="t-swiper__navigation t-swiper__navigation-bars"></ul>
  </div>
</div>
`;

exports[`Swiper :props :duration 1`] = `
<div class="t-swiper">
  <div class="t-swiper__wrap t-swiper--inside">
    <div class="t-swiper__content">
      <div class="t-swiper__container" style="transform: translate3d(-0%, 0px, 0px);"></div>
    </div>
    <ul class="t-swiper__navigation t-swiper__navigation-bars"></ul>
  </div>
</div>
`;

exports[`Swiper :props :height 1`] = `
<div class="t-swiper">
  <div class="t-swiper__wrap t-swiper--inside">
    <div class="t-swiper__content">
      <div class="t-swiper__container" style="transform: translate3d(-0%, 0px, 0px);"></div>
    </div>
    <ul class="t-swiper__navigation t-swiper__navigation-bars"></ul>
  </div>
</div>
`;

exports[`Swiper :props :interval 1`] = `
<div class="t-swiper">
  <div class="t-swiper__wrap t-swiper--inside">
    <div class="t-swiper__content">
      <div class="t-swiper__container" style="transform: translate3d(-0%, 0px, 0px);"></div>
    </div>
    <ul class="t-swiper__navigation t-swiper__navigation-bars"></ul>
  </div>
</div>
`;

exports[`Swiper :props :loop 1`] = `
<div class="t-swiper">
  <div class="t-swiper__wrap t-swiper--inside">
    <div class="t-swiper__content">
      <div class="t-swiper__container" style="transform: translate3d(-0%, 0px, 0px);"></div>
    </div>
    <ul class="t-swiper__navigation t-swiper__navigation-bars"></ul>
  </div>
</div>
`;

exports[`Swiper :props :navigation 1`] = `
<div class="t-swiper">
  <div class="t-swiper__wrap t-swiper--outside t-swiper--large">
    <div class="t-swiper__content">
      <div class="t-swiper__container" style="transform: translate3d(-0%, 0px, 0px);"></div>
    </div>
    <ul class="t-swiper__navigation"></ul>
  </div>
</div>
`;

exports[`Swiper :props :theme 1`] = `
<div class="t-swiper">
  <div class="t-swiper__wrap t-swiper--inside">
    <div class="t-swiper__content">
      <div class="t-swiper__container" style="transform: translate3d(-0%, 0px, 0px);"></div>
    </div>
    <ul class="t-swiper__navigation t-swiper__navigation-bars"></ul>
  </div>
</div>
`;

exports[`Swiper :props :type 1`] = `
<div class="t-swiper">
  <div class="t-swiper__wrap t-swiper--inside">
    <div class="t-swiper__content t-swiper-card">
      <div class="t-swiper__container"></div>
    </div>
    <ul class="t-swiper__navigation t-swiper__navigation-bars"></ul>
  </div>
</div>
`;

exports[`Swiper additional function navigation: VNode 1`] = `
<div class="t-swiper">
  <div class="t-swiper__wrap t-swiper--inside">
    <div class="t-swiper__content">
      <div class="t-swiper__container" style="transform: translate3d(-0%, 0px, 0px);"></div>
    </div>
    <div>123</div>
    <div class="t-swiper__arrow t-swiper__arrow--default">
      <div class="t-swiper__arrow-left"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-chevron-left">
          <path fill="currentColor" d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z" fill-opacity="0.9"></path>
        </svg></div>
      <div class="t-swiper__arrow-right"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-chevron-right">
          <path fill="currentColor" d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z" fill-opacity="0.9"></path>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`Swiper additional function no valid panel 1`] = `
<div class="t-swiper">
  <div class="t-swiper__wrap t-swiper--inside">
    <div class="t-swiper__content">
      <div class="t-swiper__container" style="transform: translate3d(-0%, 0px, 0px);"></div>
    </div>
    <ul class="t-swiper__navigation t-swiper__navigation-bars"></ul>
    <div class="t-swiper__arrow t-swiper__arrow--default">
      <div class="t-swiper__arrow-left"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-chevron-left">
          <path fill="currentColor" d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z" fill-opacity="0.9"></path>
        </svg></div>
      <div class="t-swiper__arrow-right"><svg fill="none" viewBox="0 0 16 16" width="1em" height="1em" class="t-icon t-icon-chevron-right">
          <path fill="currentColor" d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z" fill-opacity="0.9"></path>
        </svg></div>
    </div>
  </div>
</div>
`;
